--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,18 +25,38 @@ html, body {
     width: 100%;
 }
 
-.get-started {
-    position: absolute;
-    top: 300px;
-    margin: 0 auto;
+.cover {
+    background-image: url('../images/cover.jpg');
+    background-repeat: none;
+    width: 100%;
+    height: 0;
+    background-size: contain;
+    padding-top: 44.69%;
+    position: relative;
 }
 
+.get-started {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+}
+
+.get-started p,
+.get-started a.btn {
+    position: relative;
+    left: -50%;
+}
+
+.get-started p {
+    color: #fff;
+    font-size: 40px;
+    text-shadow: 1px 1px 1px #000;
+}
 .aspects {
     background-color: #FFF;
     width: 100%;
     height: auto;
     padding: 30px 40px;
-    margin: 0;
 }
 
 .nav-logo {
